# ai-pc-controller

./: .env.example  .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-app.yml
config/: applications.yaml  commands.yaml  default_config.yaml  hotkeys.yaml
docs/: API_REFERENCE.md  CONFIGURATION.md  CONTRIBUTING.md  INSTALLATION.md  PLUGINS.md  TROUBLESHOOTING.md  USAGE.md
scripts/: build_exe.py  install.bat  install.ps1  install_optional.bat  run.bat  uninstall.bat  update.bat
src/: __init__.py  main.py
src/ai/: __init__.py  ai_engine.py  response_parser.py
src/ai/prompts/: __init__.py  command_templates.py  system_prompts.py
src/ai/providers/: __init__.py  (+5 more)
src/automation/: __init__.py  macro_player.py  macro_recorder.py  scheduled_tasks.py  workflow_engine.py
src/controllers/: __init__.py  application_controller.py  audio_controller.py  base_controller.py  clipboard_controller.py  controller_manager.py  display_controller.py  file_controller.py  input_controller.py  media_controller.py  network_controller.py  process_controller.py  system_controller.py  web_controller.py
src/database/: __init__.py  command_history.py  db_manager.py  migrations.py  models.py
src/gui/: __init__.py  chat_widget.py  input_widget.py  main_window.py  settings_window.py  system_tray.py  themes.py
src/plugins/: __init__.py  plugin_base.py  plugin_manager.py
src/utils/: config_manager.py  exceptions.py  hotkey_manager.py  logger.py  network_utils.py  ollama_helper.py  path_utils.py  process_utils.py  security.py  singleton.py  validators.py  windows_utils.py
src/voice/: __init__.py  audio_utils.py  speech_recognition_handler.py  text_to_speech_handler.py  voice_handler_simple.py  wake_word_detector.py
tests/: __init__.py  conftest.py  test_ai_engine.py  test_controllers.py  test_gui.py  test_utils.py  test_voice.py
(+3 files in other folders)
